--- a/Style.css
+++ b/Style.css
@@ -10,6 +10,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
@@ -29,4 +30,15 @@ section{
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.dreem{
+    width: 50%;
+    padding-right: 10%;
+}
+.dreem img{
+    width: 80%;
+}
+.dreem big{
+    background-image: url(images/dream-bg.png);
+
 }
